# janus

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: Caddyfile  README.md  cloud-init.yml  docker-compose.prod.yml
docs/: DEPLOYMENT.md
src/janus/: main.py  settings.py
src/janus/autonomy/: engine.py  gates.py  levels.py
src/janus/capabilities/: base.py  codegen.py  merge.py  plan.py  review.py  triage.py  vision.py
src/janus/config/: policy.py  profiles.py
src/janus/github/: auth.py  client.py  webhook.py
src/janus/ingest/: router.py
src/janus/memory/: files.py
src/janus/models/: router.py  tiers.py
src/janus/models/prompts/: __init__.py  codegen.py  plan.py  registry.py  review.py  triage.py  vision.py
src/janus/orchestrator/: orchestrator.py
src/janus/queue/: worker.py
src/janus/sandbox/: runner.py
src/janus/store/: audit.py  db.py  oss.py  repo.py  schema.py
src/janus/telegram/: bot.py  formats.py
tests/: conftest.py  test_core.py  test_pipeline.py
